force-app/main/default/objects/SpaStateSync__c/SpaStateSync__c.object-meta.xml
<CustomObject>
    <description>Deprecation. Need to delete object. There are several dependencies that need updating

when a new sku is approved in a spa, this object is used to store values for bulk scheduled apex to update the opportunity products</description>
    <label>SpaStateSync</label>
    <nameField>
        <label>SpaStateSync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SpaStateSync</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>