force-app/main/default/objects/SpaStateSync__c/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <label>ApprovalDate</label>
    <type>Date</type>
</CustomField>