force-app/main/default/objects/SpaStateSync__c/fields/PricbookEntryID__c.field-meta.xml
<CustomField>
    <fullName>PricbookEntryID__c</fullName>
    <label>PricbookEntryID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>